--- a/Santo_Tomas,_Pampanga.mw
+++ b/Santo_Tomas,_Pampanga.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Santo Tomás<br>''Municipality of Santo Thomas''<br>''Balen ning Santu Tumás'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga santo tomas.png |
- caption      = Map of [[Pampanga]] showing the location of Santo Thomas |
- region       = [[Pegley na Luzon]] (Region III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Central District |
- barangays    = 8 |
- class        = 4th class |
- mayor        = Horst Wilhelm Obama Keni |
- founded      = [[October 16|Oktobre 16]], [[1957]]|
- cityhood     =  |
- areakm2      = -   |
- pop2000      = 32,695 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santo Tomas, Pampanga
 | 1990 = 33309		
@@ -30,12 +12,11 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Santo Tomás''' (abe suraten ed '''Sto. Tomas'''), sakey [[baley]] diad [[filipinas|Pilipino]] ed [[luyag]] na [[Pampanga]].
+Say '''Santo Tomás''' sakey [[baley]] diad [[filipinas|Pilipino]] ed [[luyag]] na [[Pampanga]].
 
-==Listaan na Barangay==
+==Listaan na barangay==
 
 Say Santo Tomas walay 8 ya [[barangay]].
-
 
 * Moras De La Paz
 * Poblacion
@@ -46,8 +27,10 @@ Say Santo Tomas walay 8 ya [[barangay]].
 * Sapa (Santo Niño)
 * Balangcas (Saturday)
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{pampanga}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
