--- a/Sasmuan.mw
+++ b/Sasmuan.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = ''Baley na Sasmoan''<br>''Municipia Sexmoan''<br>Balen ning Sasmuan |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga sasmuan.png |
- caption      = Map of [[Pampanga]] showing the location of Sasmuan |
- region       = [[Pegley na Luzon]] (Region III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Southern District |
- barangays    = 12 |
- class        = 4th class |
- mayor        = Daniel Razon Reynaldo |
- founded      = -|
- cityhood     =  |
- areakm2      = -   |
- pop2000      = 23,359 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sasmuan, Pampanga
 | 1990 = 21148		
@@ -30,12 +12,11 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Sasmuan''' ([[salitan Latino|Latino]]: ''Municipia Sexmoan''; [[salitan Pangasinan|Pangasinense]]: ''Baley na Sasmoan''), sakey [[baley]] diad [[filipinas|Pilipino]] ed [[luyag]] na [[Pampanga]].
+Say '''Sasmuan''' sakey [[baley]] diad [[filipinas|Pilipino]] ed [[luyag]] na [[Pampanga]].
 
 ==Listaan na Barangay==
 
 Say Sasmuan walay 12 ya [[barangay]].
-
 
 * Batang 1st
 * Batang 2nd
@@ -50,8 +31,10 @@ Say Sasmuan walay 12 ya [[barangay]].
 * Santo Tomas
 * Sebitanan
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{pampanga}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
