--- a/San_Fernando,_Pampanga.mw
+++ b/San_Fernando,_Pampanga.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_pampanga_san_fernando.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''San Fernando, Pampanga''' et unaan ya klase siyudad ed luyag na [[Pampanga]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 285,912 totoo. <br> 	
-Walay kabaleg tan sukat to ya 67.74 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 2000. 			
+Walay kabaleg tan sukat to ya 67.74 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 2000.
+
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Pampanga}} 			
 									
 [[Category:Saray siyudad na Filipinas]]
