--- a/Angeles.mw
+++ b/Angeles.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_pampanga_angeles.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Angeles''' et unaan ya klase siyudad ed luyag na [[Pampanga]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 326,336 totoo. <br> 	
-Walay kabaleg tan sukat to ya 60.27 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 2009. 			
+Walay kabaleg tan sukat to ya 60.27 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 2009. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Pampanga}}	
 									
 [[Category:Saray siyudad na Filipinas]]
