--- a/Agno.mw
+++ b/Agno.mw
@@ -12,38 +12,38 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Agno''': sakey ya [[baley]] ed [[luyag na Pangasinan]]. Onong ed [[2000]] census, walay population to ya 25,077 ya too diad 5,493 ya pamilya. 
+Say '''Agno''': sakey ya [[Saray baley na Filipinas|baley]] ed [[luyag na Pangasinan]]. Onong ed [[2000]] census, walay papulasyon to ya 25,077 ya too diad 5,493 ya pamilya. 
 
-==Listaan na Barangay==
+==Listaan na barangay==
 
-Walay 17 ya [[barangay]] ed [[baley]] na Agno.
+Walay 17 ya [[barangay]] ed baley na Agno.
 
 <table border=0><tr>
 <td valign=top>
-* [[Allabon]]
-* [[Aloleng]]
-* [[Bangan-Oda]]
-* [[Baruan]]
-* [[Boboy]]
-* [[Cayungnan]]
-* [[Dangley]]
-* [[Gayusan]]
-* [[Macaboboni]]
+* Allabon
+* Aloleng
+* Bangan-Oda
+* Baruan
+* Boboy
+* Cayungnan
+* Dangley
+* Gayusan
+* Macaboboni
 </td><td valign=top>
-* [[Magsaysay (Agno)|Magsaysay]]
-* [[Namatucan]]
-* [[Patar (Agno)|Patar]]
-* [[Poblacion East (Agno)|Poblacion East]]
-* [[Poblacion West (Agno)|Poblacion West]]
-* [[San Juan (Agno, Pangasinan)|San Juan]]
-* [[Tupa (Agno)|Tupa]]
-* [[Viga (Agno)|Viga]]
+* Magsaysay
+* Namatucan
+* Patar
+* Poblacion East
+* Poblacion West
+* San Juan
+* Tupa
+* Viga
 </td></tr></table>
 
 == Saray reperensiya ==
 {{Reflist}}	
 
-==Saray Gawing ed Labas==
+==Saray gawing ed labas==
 * [http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 * [http://www.agno.pangasinan.info  Agno, Pangasinan website]
 * [http://www.pangasinan.gov.ph Official Website of the Provincial Government of Pangasinan]
@@ -57,7 +57,6 @@ Walay 17 ya [[barangay]] ed [[baley]] na Agno.
  | West      = ''[[Dagat ed Timog Zhongguo]]''
 }}
 
-{{Agno}}
 {{Pangasinan}}
 
 [[Category:Saray baley na Pangasinan]]
