--- a/Template:Pangasinan.mw
+++ b/Template:Pangasinan.mw
@@ -51,10 +51,10 @@
 * [[Villasis, Pangasinan|Villasis]]
 |group2 = Saray siyudad
 |list2 =  
-* [[Alaminos, Pangasinan|Alaminos]]
-* [[Dagupan]] 
+* [[Alaminos]]
+* [[Siyudad na Dagupan|Dagupan]] 
 * [[San Carlos, Pangasinan|San Carlos]]
-* [[Urdaneta, Pangasinan|Urdaneta]]
+* [[Urdaneta]]
 }}<noinclude>
 [[Category:Saray baley na Pangasinan| ]]
 </noinclude>
