--- a/Agdangan.mw
+++ b/Agdangan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon agdangan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Agdangan, Quezon
 | 1990 = 8207		
@@ -26,6 +27,9 @@ Say '''Agdangan''' et kumalima ya klase baley ed luyag na [[Quezon]], [[Pilipina
 * Sildora
 * Poblacion I
 * Poblacion II
+
+== Saray reperensiya ==
+{{Reflist}}
 
 == Saray gawing ed labas ==
 * [http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
