--- a/Alabat.mw
+++ b/Alabat.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon alabat.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alabat, Quezon
 | 1990 = 11785		
@@ -33,6 +34,9 @@ Say '''Alabat''' et kumalima ya klase baley ed luyag na [[Quezon]], [[Pilipinas]
 * Villa Jesus Weste
 * Villa Norte
 * Villa Victoria
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
