--- a/Template:Quezon.mw
+++ b/Template:Quezon.mw
@@ -7,7 +7,7 @@
 |list1 = 
 * [[Agdangan, Quezon|Agdangan]]
 * [[Alabat, Quezon|Alabat]]
-* [[Atimonan, Quezon|Atimonan]]
+* [[Atimonan]]
 * [[Buenavista, Quezon|Buenavista]]
 * [[Burdeos, Quezon|Burdeos]]
 * [[Calauag, Quezon|Calauag]]
