--- a/Atimonan.mw
+++ b/Atimonan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon atimonan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Atimonan, Quezon
 | 1990 = 46651		
@@ -56,6 +57,9 @@ Say '''Atimonan''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]
 * Tinandog
 * Villa Ibaba
 * Villa Ilaya
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
