--- a/Buenavista,_Quezon.mw
+++ b/Buenavista,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon buenavista.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Buenavista, Quezon
 | 1990 = 20060		
@@ -51,6 +52,9 @@ Say '''Buenavista''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilipin
 * Villa Batabat
 * Villa Magsaysay
 * Villa Veronica
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
