--- a/Template:Quezon.mw
+++ b/Template:Quezon.mw
@@ -9,7 +9,7 @@
 * [[Alabat, Quezon|Alabat]]
 * [[Atimonan]]
 * [[Buenavista, Quezon|Buenavista]]
-* [[Burdeos, Quezon|Burdeos]]
+* [[Burdeos]]
 * [[Calauag, Quezon|Calauag]]
 * [[Candelaria, Quezon|Candelaria]]
 * [[Catanauan, Quezon|Catanauan]]
