--- a/Burdeos.mw
+++ b/Burdeos.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon burdeos.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Burdeos, Quezon
 | 1990 = 17983		
@@ -28,6 +29,9 @@ Say '''Burdeos''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilipinas]
 * Poblacion
 * Rizal
 * San Rafael
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
