--- a/Calauag,_Quezon.mw
+++ b/Calauag,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon calauag.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calauag, Quezon
 | 1990 = 64856		
@@ -97,6 +98,9 @@ Say '''Calauag''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]].
 * Villa San Isidro
 * Viñas
 * Yaganak
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
