--- a/Candelaria,_Quezon.mw
+++ b/Candelaria,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon candelaria.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Candelaria, Quezon
 | 1990 = 69969		
@@ -39,6 +40,9 @@ Say '''Candelaria''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas
 * San Isidro 
 * Sta. Catalina Norte
 * Sta. Catalina Sur 
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
