--- a/Catanauan.mw
+++ b/Catanauan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon catanauan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Catanauan, Quezon
 | 1990 = 48019		
@@ -60,6 +61,9 @@ Say '''Catanauan''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]
 * Tagbacan Ilaya
 * Tagbacan Silangan
 * Tuhian
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
