--- a/Dolores,_Quezon.mw
+++ b/Dolores,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon dolores.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dolores, Quezon
 | 1990 = 18146		
@@ -30,6 +31,9 @@ Say '''Dolores''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilipinas]
 * Santa Lucia
 * Silanganan (Pob.)
 * Bulakin II
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
