--- a/General_Luna,_Quezon.mw
+++ b/General_Luna,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon general luna.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> General Luna, Quezon
 | 1990 = 17997		
@@ -41,6 +42,9 @@ Say '''General Luna''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilip
 * Santa Maria Ilaya
 * Sumilang
 * Villarica
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
