--- a/General_Nakar.mw
+++ b/General_Nakar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon general nakar.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> General Nakar, Quezon
 | 1990 = 18323		
@@ -33,6 +34,9 @@ Say '''General Nakar''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipi
 * Sablang
 * San Marcelino
 * Umiray
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
