--- a/Guinayangan.mw
+++ b/Guinayangan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon guinayangan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Guinayangan, Quezon
 | 1990 = 32829		
@@ -68,6 +69,9 @@ Say '''Guinayangan''' et kumatlo ya klase baley ed luyag na [[Quezon]], [[Pilipi
 * Tikay
 * Triumpo
 * Villa Hiwasayan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
