--- a/Gumaca.mw
+++ b/Gumaca.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon gumaca.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gumaca, Quezon
 | 1990 = 48195		
@@ -73,6 +74,9 @@ Say '''Gumaca''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]. 
 * Villa Principe
 * Villa Tañada
 * Villa Victoria
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
