--- a/Infanta,_Quezon.mw
+++ b/Infanta,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon infanta.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Infanta, Quezon
 | 1990 = 35564		
@@ -50,6 +51,9 @@ Say '''Infanta''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]].
 * Cawaynin
 * Antikin
 * Tudturan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
