--- a/Jomalig.mw
+++ b/Jomalig.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon jomalig.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jomalig, Quezon
 | 1990 = 4542		
@@ -19,6 +20,9 @@ Say '''Jomalig''' et kumalima ya klase baley ed luyag na [[Quezon]], [[Pilipinas
 *Gango
 *Talisoy (Pob.)
 *Apad
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
