--- a/Lopez.mw
+++ b/Lopez.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon lopez.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lopez, Quezon
 | 1990 = 66010		
@@ -109,6 +110,9 @@ Say '''Lopez''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]. U
 *Villahermosa
 *Villamonte
 *Villanacaob
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
