--- a/Lucban.mw
+++ b/Lucban.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon lucban.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lucban, Quezon
 | 1990 = 30130		
@@ -46,6 +47,9 @@ Say '''Lucban''' et kumadwa ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]
 * Samil
 * Tiawe
 * Tinamnan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
