--- a/Macalelon.mw
+++ b/Macalelon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon macalelon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Macalelon, Quezon
 | 1990 = 19887		
@@ -44,6 +45,9 @@ Say '''Macalelon''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilipina
 * Tubigan Ibaba
 * Tubigan Ilaya
 * Vista Hermosa
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
