--- a/Mauban.mw
+++ b/Mauban.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon mauban.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mauban, Quezon
 | 1990 = 43740		
@@ -54,6 +55,9 @@ Say '''Mauban''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]. 
 * Soledad
 * Tapucan
 * Lual Rural
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
