--- a/Mulanay.mw
+++ b/Mulanay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon mulanay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mulanay, Quezon
 | 1990 = 38606		
@@ -42,6 +43,9 @@ Say '''Mulanay''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]].
 * San Isidro
 * San Pedro
 * Santa Rosa
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
