--- a/Padre_Burgos,_Quezon.mw
+++ b/Padre_Burgos,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon padre burgos.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Padre Burgos, Quezon
 | 1990 = 15219		
@@ -36,6 +37,9 @@ Say '''Padre Burgos''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilip
 * Villapaz
 * Walay
 * Yawe
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
