--- a/Pagbilao.mw
+++ b/Pagbilao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon pagbilao.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pagbilao, Quezon
 | 1990 = 41635		
@@ -41,6 +42,9 @@ Say '''Pagbilao''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]
 * Silangang Malicboy
 * Talipan
 * Tukalan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
