--- a/Panukulan.mw
+++ b/Panukulan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon panukulan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Panukulan, Quezon
 | 1990 = 9815		
@@ -26,6 +27,9 @@ Say '''Panukulan''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilipina
 * Pagitan
 * Pandan
 * San Juan (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
