--- a/Template:Quezon.mw
+++ b/Template:Quezon.mw
@@ -27,7 +27,7 @@
 * [[Mulanay, Quezon|Mulanay]]
 * [[Padre Burgos, Quezon|Padre Burgos]]
 * [[Pagbilao, Quezon|Pagbilao]]
-* [[Panukulan, Quezon|Panukulan]]
+* [[Panukulan]]
 * [[Patnanungan, Quezon|Patnanungan]]
 * [[Perez, Quezon|Perez]]
 * [[Pitogo, Quezon|Pitogo]]
