--- a/Patnanungan.mw
+++ b/Patnanungan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon patnanungan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Patnanungan, Quezon
 | 1990 = 9447		
@@ -20,6 +21,9 @@ Say '''Patnanungan''' et kumalima ya klase baley ed luyag na [[Quezon]], [[Pilip
 * Luod
 * Patnanungan Norte
 * Patnanungan Sur (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
