--- a/Perez.mw
+++ b/Perez.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon perez.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Perez, Quezon
 | 1990 = 8609		
@@ -28,6 +29,9 @@ Say '''Perez''' et kumalima ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]
 * Sangirin
 * Villamanzano Norte
 * Villamanzano Sur
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
