--- a/Pitogo,_Quezon.mw
+++ b/Pitogo,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon pitogo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pitogo, Quezon
 | 1990 = 17086		
@@ -53,6 +54,9 @@ Say '''Pitogo''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]
 * Sumag Este
 * Sumag Norte
 * Sumag Weste
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
