--- a/Plaridel,_Quezon.mw
+++ b/Plaridel,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon plaridel.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Plaridel, Quezon
 | 1990 = 7473		
@@ -24,6 +25,8 @@ Say '''Plaridel''' et kumalima ya klase baley ed luyag na [[Quezon]], [[Pilipina
 * Paaralan or Pampaaralan (Pob.)
 * M. L. Tumagay (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
