--- a/Polillo.mw
+++ b/Polillo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon polillo.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Polillo, Quezon
 | 1990 = 23183		
@@ -34,6 +35,9 @@ Say '''Polillo''' et kumatlo ya klase baley ed luyag na [[Quezon]], [[Pilipinas]
 * Sibulan
 * Taluong
 * Tamulaya-Anibong
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
