--- a/Quezon,_Quezon.mw
+++ b/Quezon,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon quezon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Quezon, Quezon
 | 1990 = 11345		
@@ -38,6 +39,9 @@ Say '''Quezon''' et kumalima ya klase baley ed luyag na [[Quezon]], [[Pilipinas]
 * Villa Francia
 * Villa Gomez
 * Villa Mercedes
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
