--- a/Real.mw
+++ b/Real.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon real.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Real, Quezon
 | 1990 = 20475		
@@ -31,6 +32,9 @@ Say '''Real''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]. Un
 * Bagong Silang
 * Masikap
 * Tagumpay
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
