--- a/Sampaloc,_Quezon.mw
+++ b/Sampaloc,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon sampaloc.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sampaloc, Quezon
 | 1990 = 11132		
@@ -28,6 +29,9 @@ Say '''Sampaloc''' et kumalima ya klase baley ed luyag na [[Quezon]], [[Pilipina
 * San Isidro (Pob.)
 * San Roque (Pob.)
 * Taquico
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
