--- a/San_Andres,_Quezon.mw
+++ b/San_Andres,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon san andres.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Andres, Quezon
 | 1990 = 23716		
@@ -21,6 +22,9 @@ Say '''San Andres''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilipin
 * Tala
 * Talisay
 * Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
