--- a/San_Antonio,_Quezon.mw
+++ b/San_Antonio,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon san antonio.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Antonio, Quezon
 | 1990 = 20786		
@@ -34,6 +35,9 @@ Say '''San Antonio''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilipi
 * Sampaguita
 * San Jose
 * Sinturisan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
