--- a/San_Francisco,_Quezon.mw
+++ b/San_Francisco,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon san francisco.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Francisco, Quezon
 | 1990 = 41142		
@@ -30,6 +31,9 @@ Say '''San Francisco''' et kumadwa ya klase baley ed luyag na [[Quezon]], [[Pili
 * Don Juan Vercelos
 * Mabunga
 * Santo Niño
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
