--- a/San_Narciso,_Quezon.mw
+++ b/San_Narciso,_Quezon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon san narciso.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Narciso, Quezon
 | 1990 = 33025		
@@ -39,6 +40,9 @@ Say '''San Narciso''' et kumatlo ya klase baley ed luyag na [[Quezon]], [[Pilipi
 * Villa Aurin (Pinagsama)
 * Villa Reyes
 * White Cliff
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
