--- a/Sariaya.mw
+++ b/Sariaya.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon sariaya.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sariaya, Quezon
 | 1990 = 91081		
@@ -57,6 +58,9 @@ Say '''Sariaya''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]].
 * Talaan Pantoc
 * Tumbaga 1
 * Tumbaga 2
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
