--- a/Template:Quezon.mw
+++ b/Template:Quezon.mw
@@ -40,7 +40,7 @@
 * [[San Antonio, Quezon|San Antonio]]
 * [[San Francisco, Quezon|San Francisco]]
 * [[San Narciso, Quezon|San Narciso]]
-* [[Sariaya, Quezon|Sariaya]]
+* [[Sariaya]]
 * [[Tagkawayan, Quezon|Tagkawayan]]
 * [[Tiaong, Quezon|Tiaong]]
 * [[Unisan, Quezon|Unisan]]
