--- a/Tagkawayan.mw
+++ b/Tagkawayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon tagkawayan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tagkawayan, Quezon
 | 1990 = 40221		
@@ -59,6 +60,9 @@ Say '''Tagkawayan''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas
 * Tabason
 * Tunton
 * Victoria
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
