--- a/Tiaong.mw
+++ b/Tiaong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon tiaong.png|right|270px]] 
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tiaong, Quezon
 | 1990 = 60662		
@@ -45,6 +46,9 @@ Say '''Tiaong''' et unaan ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]. 
 * Talisay
 * Tamisian
 * San Francisco
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
