--- a/Template:Quezon.mw
+++ b/Template:Quezon.mw
@@ -42,7 +42,7 @@
 * [[San Narciso, Quezon|San Narciso]]
 * [[Sariaya]]
 * [[Tagkawayan, Quezon|Tagkawayan]]
-* [[Tiaong, Quezon|Tiaong]]
+* [[Tiaong]]
 * [[Unisan, Quezon|Unisan]]
 |group2 = Saray siyudad
 |list2 = 
