--- a/Unisan.mw
+++ b/Unisan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quezon unisan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Unisan, Quezon
 | 1990 = 19851		
@@ -50,6 +51,9 @@ Say '''Unisan''' et kumapat ya klase baley ed luyag na [[Quezon]], [[Pilipinas]]
 * Tagumpay
 * Tubas
 * Tubigan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
