--- a/Aglipay.mw
+++ b/Aglipay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quirino aglipay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Aglipay, Quirino
 | 1990 = 16427		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Aglipay''' et kumatlo ya klase baley ed luyag na [[Quirino]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 26,187 totoo. Walay kabaleg tan sukat to ya 161.7 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 3403.	
-
 
 ==Saray barangay==
 * Dagupan
@@ -40,6 +40,9 @@ Say '''Aglipay''' et kumatlo ya klase baley ed luyag na [[Quirino]], [[Pilipinas
 * San Benigno
 * San Manuel
 * Villa Ventura
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
