--- a/Cabarroguis.mw
+++ b/Cabarroguis.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quirino cabarroguis.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cabarroguis, Quirino
 | 1990 = 21793		
@@ -31,6 +32,9 @@ Say '''Cabarroguis''' et kumatlo ya klase baley ed luyag na [[Quirino]], [[Pilip
 * Tucod
 * Gomez
 * Santo Domingo
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
