--- a/Diffun.mw
+++ b/Diffun.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quirino diffun.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Diffun, Quirino
 | 1990 = 31266		
@@ -48,6 +49,9 @@ Say '''Diffun''' et kumadwa ya klase baley ed luyag na [[Quirino]], [[Pilipinas]
 * Aklan Village
 * Gregorio Pimentel
 * Don Faustino Pagaduan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
