--- a/Maddela.mw
+++ b/Maddela.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quirino maddela.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maddela, Quirino
 | 1990 = 25268		
@@ -46,6 +47,9 @@ Say '''Maddela''' et unaan ya klase baley ed luyag na [[Quirino]], [[Pilipinas]]
 * Villa Jose V Ylanan
 * Jose Ancheta
 * Santa Maria
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
