--- a/Nagtipunan.mw
+++ b/Nagtipunan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quirino nagtipunan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Nagtipunan, Quirino
 | 1990 = 9460		
@@ -30,6 +31,9 @@ Say '''Nagtipunan''' et unaan ya klase baley ed luyag na [[Quirino]], [[Pilipina
 * Sangbay
 * Wasid
 * Asaklat
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
