--- a/Saguday.mw
+++ b/Saguday.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator quirino saguday.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Saguday, Quirino
 | 1990 = 9918		
@@ -24,6 +25,9 @@ Say '''Saguday''' et kumalima ya klase baley ed luyag na [[Quirino]], [[Pilipina
 * Tres Reyes
 * Cardenas
 * Gamis
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
