--- a/Pateros.mw
+++ b/Pateros.mw
@@ -1,21 +1,4 @@
-{{Infobox Philippine city |
- infoboxtitle = Pateros|
- sealfile     = Ph seal ncr pateros.png |
- locatormapfile = Ph_locator_ncr_pateros.png |
- caption      = Map of [[Metro Manila]] showing the location of QC. |
- region       = [[Metro Manila]] (NCR) |
- province     = [[Metro Manila]] |
- districts    = - |
- barangays    = 10 |
- class        = premier class |
- mayor        = [[Joey Medina]] ([[2010]]-) |
- founded      = [[1707]]|
- cityhood     = 2009 |
- areakm2      =  |
- pop2000      =  |
- popden2000   = |
- coordinates  = |
-}}
+{{Infobox location}}
 
 An '''Pateros''' sakey [[baley]] so [[Metro Manila]], [[Filipinas]].
 
@@ -48,8 +31,10 @@ Saray barangay so Pateros number ten:
 | 2030 =
 }}
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{Metro Manila}}
+{{philippines-geo-stub}}
 
-[[category:Baley na Metro Manila]]
+[[Category:Baley na Metro Manila]]
