--- a/Manila.mw
+++ b/Manila.mw
@@ -1,23 +1,6 @@
 {{translation}}
 
-{{Infobox Philippine city |
- infoboxtitle = City of Manila<br />Siyudad na Manila<br />Lungsod na Maynila |
- sealfile     = Ph seal ncr manila.png |
- locatormapfile = Ph_locator_ncr_manila.png |
- caption      = Map of [[Metro Manila]] showing the location of the City of Manila. |
- region       = [[Metro Manila]] (NCR) |
- province     = [[Metro Manila]] |
- districts    = all district |
- barangays    = 897 |
- class        =  |
- mayor        = [[Alfredo Lim]] ([[2007]]-) |
- founded      = [[1571]]|
- cityhood     = [[1901]] |
- areakm2      =  |
- pop2000      =  |
- popden2000   = |
- coordinates  = |
-}}
+{{Infobox location}}
 
 Say '''Siyudad na Manila''' ([[salitan English|English]]: ''City of Manila''; [[salitan Filipino|Filipino]]: ''Lungsod ng Maynila'') sakey kabesera na [[siyudad]] ed rehion [[Metro Manila]], [[Filipinas]].
 
@@ -66,6 +49,9 @@ Image:Philippine General Hospital.JPG|[[Ospital Heneral diad Pilipino]]
 * [[Lea Salonga]], kanta
 * [[Manuel Villar]], dagat-basura campaign
 * [[Vic Sotto]], aktor tan kanta
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Ofisial a websait==
 * [http://www.cityofmanila.com.ph/ City of Manila.com.ph]
