--- a/Template:Infobox_Philippine_region.mw
+++ b/Template:Infobox_Philippine_region.mw
@@ -1,49 +1,1 @@
-<div style="float: right; margin: 0 0 1em 1em; width: auto; text-align: center; font-size: 90%; line-height: 1.4em;">
-
-
-<!-- start of floated right section -->
-<div style="border: 1px solid #ccd2d9; width: 23em; background: #f9f9f9; text-align: left; padding: 0.5em 1em 0.5em 1em; text-align: center;">
-
-
-{| style="background: transparent; text-align: left; table-layout: auto; border-collapse: collapse; padding: 0; font-size: 100%;" cellspacing="0" cellpadding="0"
-
-{| class="infobox" style="width: 19em; text-align: left; font-size: 110%;"
-|+ style="font-size: larger;" | '''{{{name}}}'''
-|-{{!}}-
-| colspan="2" style="text-align: center;" |
-[[Image:{{{map_file}}}|222px|center|Map of the Philippines showing the location of {{{name}}}]]
-|-
-! style="white-space: nowrap;" | Regional center
-| {{{center}}}
-|-
-! Bilang na too
-| {{{population}}}
-|-
-! &ndash; Density
-| {{{density_km2}}} per km²
-|-
-! Awang
-| {{{area_km2}}} km²
-|-
-! colspan="2" | Divisions
-|-
-! &ndash; [[Provinces of the Philippines|Saray Luyag]]
-| {{{provinces}}}
-|-
-! &ndash; [[Cities of the Philippines|Saray Siyudad]]
-| {{{cities}}}
-|-
-! &ndash; [[Municipalities of the Philippines|Saray Baley]]
-| {{{municipalities}}}
-|-
-! &ndash; Saray [[Barangay]]
-| {{{barangays}}}
-|-
-! style="white-space: nowrap;" | &ndash; [[House of Representatives of the Philippines|Saray Distrito na Congress]]
-| {{{districts}}}
-|-
-! Saray salita
-| {{{languages}}}
-|}
-</div>
-</div>
+#REDIRECT [[Template:Infobox location]]
