--- a/Template:Rizal.mw
+++ b/Template:Rizal.mw
@@ -5,7 +5,7 @@
 |listclass = hlist
 |group1 = Saray baley
 |list1 = 
-* [[Angono, Rizal|Angono]]
+* [[Angono]]
 * [[Baras, Rizal|Baras]]
 * [[Binangonan, Rizal|Binangonan]]
 * [[Cainta, Rizal|Cainta]]
