--- a/Angono.mw
+++ b/Angono.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator rizal angono.png|right|270px]]													
+{{Infobox location}}
+											
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Angono, Rizal
 | 1990 = 46014		
@@ -25,6 +26,9 @@ Unong ed 2010 Census, say papulasyon to et 102,407 totoo. Walay kabaleg tan suka
 * San Vicente
 * Santo Niño
 * Mahabang Parang
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
