--- a/Baras,_Rizal.mw
+++ b/Baras,_Rizal.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator rizal baras.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Baras, Rizal
 | 1990 = 16880		
@@ -26,6 +27,8 @@ Unong ed 2010 Census, say papulasyon to et 32,609 totoo. Walay kabaleg tan sukat
 * Mabini
 * Pinugay
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
