--- a/Binangonan.mw
+++ b/Binangonan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator rizal binangonan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Binangonan, Rizal
 | 1990 = 127561		
@@ -54,7 +55,9 @@ Say '''Binangonan''' et unaan ya klase baley ed luyag na [[Rizal]], [[Pilipinas]
 * Malakaban
 * Pag-Asa
 * San Carlos
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
