--- a/Cainta.mw
+++ b/Cainta.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_rizal cainta.png|right|270px]]
+{{Infobox location}}
 		
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cainta, Rizal
@@ -25,6 +25,8 @@ Say Cainta walay 7 ya [[barangay]]:
 * Santo Domingo
 * Santo Niño
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
