--- a/Cardona.mw
+++ b/Cardona.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_rizal cardona.png |270px|right]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cardona, Rizal
@@ -36,6 +36,9 @@ Unong ed 2010 Census, say papulasyon to et 47,414 totoo. Walay kabaleg tan sukat
 * Ticulio
 * Tuna
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
@@ -43,5 +46,4 @@ Unong ed 2010 Census, say papulasyon to et 47,414 totoo. Walay kabaleg tan sukat
 
 {{Rizal}}
  
-
 [[Category:Saray baley na Rizal]]
