--- a/Jalajala.mw
+++ b/Jalajala.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator rizal jalajala.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jalajala, Rizal
 | 1990 = 16318		
@@ -22,6 +23,8 @@ Unong ed 2010 Census, say papulasyon to et 30,074 totoo. Walay kabaleg tan sukat
 * Santo Domingo
 * Santo Niño
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
