--- a/Morong,_Rizal.mw
+++ b/Morong,_Rizal.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator rizal morong.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Morong, Rizal
 | 1990 = 32165		
@@ -34,6 +35,8 @@ Unong ed 2010 Census, say papulasyon to et 52,194 totoo. Walay kabaleg tan sukat
 * Ticulio
 * Tuna
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
