--- a/Pililla.mw
+++ b/Pililla.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator rizal pililla.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pililla, Rizal
 | 1990 = 32771		
@@ -25,7 +26,9 @@ Say '''Pililla''' et unaan ya klase baley ed luyag na [[Rizal]], [[Pilipinas]]. 
 * Sipsipin
 * Special District (Poblacion)
 * Paalaman
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
