--- a/Rodriguez.mw
+++ b/Rodriguez.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_rizal rodriguez.png |right|270px]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rodriguez, Rizal
@@ -14,7 +14,6 @@
 |}}
 Say '''Rodriguez''' et unaan ya klase baley ed luyag na [[Rizal]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 280,904 totoo. Walay kabaleg tan sukat to ya 172.65 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 1860.
-
 
 == Saray barangay ==
 
@@ -32,6 +31,8 @@ Say Rodriguez walay 11 ya [[barangay]]:
 *Rosario
 *Puray
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -40,5 +41,4 @@ Say Rodriguez walay 11 ya [[barangay]]:
 
 {{Rizal}}
  
-
 [[Category:Saray baley na Rizal]]
