--- a/San_Mateo,_Rizal.mw
+++ b/San_Mateo,_Rizal.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_rizal san mateo.png |270px|right]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Mateo, Rizal
@@ -14,7 +14,6 @@
 |}}
 Say '''San Mateo''' et unaan ya klase baley ed luyag na [[Rizal]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 205,255 totoo. Walay kabaleg tan sukat to ya 55.09 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 1850.
-
 
 == Listaan na barangay ==
 Say San Mateo walay 15 ya [[barangay]]:
@@ -44,7 +43,14 @@ Say San Mateo walay 15 ya [[barangay]]:
 * [[Rhea Santos]], bareta diad [[GMA Network]], [[Quezon City]]
 * Sophie Delos Santos-Ignacio, model
 
-==Lokasiyon ed Hiyograpiko==
+== Saray reperensiya ==
+{{Reflist}}
+
+==Saray gawing ed labas==
+*[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
+*[http://www.census.gov.ph/ Philippine Census Information]
+*[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
+
 {{Geographic Location
 |Centre    = San Mateo
 |North     = [[Rodriguez, Rizal|Rodriguez]]
@@ -53,14 +59,6 @@ Say San Mateo walay 15 ya [[barangay]]:
 |Southwest = [[Marikina City]]
 |West      = [[Quezon City]]
 }}
-
-
-==Saray gawing ed labas==
-*[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
-*[http://www.census.gov.ph/ Philippine Census Information]
-*[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
-
 {{Rizal}}
  
-
 [[Category:Saray baley na Rizal]]
