--- a/Tanay.mw
+++ b/Tanay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator rizal tanay.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tanay, Rizal
 | 1990 = 58410		
@@ -25,6 +26,8 @@ Unong ed 2010 Census, say papulasyon to et 98,879 totoo. Walay kabaleg tan sukat
 * San Juan (Poblacion)
 * San Pedro (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
