--- a/Taytay,_Rizal.mw
+++ b/Taytay,_Rizal.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_rizal taytay.png|right|270px]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Taytay, Rizal
@@ -15,7 +15,6 @@
 Say '''Taytay''' et unaan ya klase baley ed luyag na [[Rizal]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 288,956 totoo. Walay kabaleg tan sukat to ya 38.80 sq. km. Sikato et walad unaan  distrito. Say zip code to et 1920.
     
-
 == Listaan na barangay ==
 Say Taytay walay 5 ya [[barangay]]:
 
@@ -25,6 +24,8 @@ Say Taytay walay 5 ya [[barangay]]:
 *San Juan
 *Santa Ana
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -33,5 +34,4 @@ Say Taytay walay 5 ya [[barangay]]:
 
 {{Rizal}}
  
-
 [[Category:Saray baley na Rizal]]
