--- a/Teresa.mw
+++ b/Teresa.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_rizal teresa.png |right|270px]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Teresa, Rizal
@@ -27,13 +27,16 @@ Say Teresa walay 9 ya [[barangay]]:
 * San Roque
 * Calumpang Santo Cristo
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 * [http://www.teresarizal.gov.ph/ www.teresarizal.gov.ph]
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-==Lokasiyon ed Hiyograpiko==
+
 {{Geographic location
  | Centre    = Teresa/Teressa
  | North     = [[Antipolo]]
