--- a/Eat_Bulaga!.mw
+++ b/Eat_Bulaga!.mw
@@ -31,6 +31,7 @@ Say '''Eat Bulaga!''' ([[salitan Baybayin|Baybayin]]: ''리이,,, ブラガ''; [
 *[[Joss Gambaboy]] (2011–present)
 * [[Ryzza Mae Dizon]] <small>(2012–present) (Little Miss Philippines 2012 Winner)</small>
 *[[Jingo Macapagal]] (2012–present)
+* [[Maureen Wroblewitz]] <small>(2018–present)</small>
 {{col-end}}
 
 ===Featuring===
