--- a/Alcantara,_Romblon.mw
+++ b/Alcantara,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon alcantara.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alcantara, Romblon
 | 1990 = 11061		
@@ -27,6 +28,8 @@ Say '''Alcantara''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipi
 * Lawan
 * San Roque
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -34,6 +37,5 @@ Say '''Alcantara''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipi
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
-														
+ 													
 [[Category:Saray baley na Romblon]]
