--- a/Banton.mw
+++ b/Banton.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon banton.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Banton, Romblon
 | 1990 = 7077		
@@ -32,6 +33,8 @@ Say '''Banton''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipinas
 * Tumalum
 * Yabawon
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -39,6 +42,5 @@ Say '''Banton''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipinas
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
-														
+ 													
 [[Category:Saray baley na Romblon]]
