--- a/Cajidiocan.mw
+++ b/Cajidiocan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon cajidiocan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cajidiocan, Romblon
 | 1990 = 17250		
@@ -29,6 +30,8 @@ Say '''Cajidiocan''' et kumapat ya klase baley ed luyag na [[Romblon]], [[Pilipi
 * Sugod
 * Taguilos
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -36,6 +39,5 @@ Say '''Cajidiocan''' et kumapat ya klase baley ed luyag na [[Romblon]], [[Pilipi
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
-														
+ 													
 [[Category:Saray baley na Romblon]]
