--- a/Calatrava,_Romblon.mw
+++ b/Calatrava,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon calatrava.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calatrava, Romblon
 | 1990 = 7463		
@@ -22,6 +23,8 @@ Say '''Calatrava''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipi
 * San Roque
 * Talisay
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -29,6 +32,5 @@ Say '''Calatrava''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipi
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
-														
+ 													
 [[Category:Saray baley na Romblon]]
