--- a/Concepcion,_Romblon.mw
+++ b/Concepcion,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon concepcion.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Concepcion, Romblon
 | 1990 = 4910		
@@ -24,6 +25,8 @@ Say '''Concepcion''' et kumanem ya klase baley ed luyag na [[Romblon]], [[Pilipi
 * San Vicente
 * Masadya
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -31,6 +34,5 @@ Say '''Concepcion''' et kumanem ya klase baley ed luyag na [[Romblon]], [[Pilipi
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
-													
+ 												
 [[Category:Saray baley na Romblon]]
