--- a/Template:Romblon.mw
+++ b/Template:Romblon.mw
@@ -10,7 +10,7 @@
 * [[Cajidiocan, Romblon|Cajidiocan]]
 * [[Calatrava, Romblon|Calatrava]]
 * [[Concepcion, Romblon|Concepcion]]
-* [[Corcuera, Romblon|Corcuera]]
+* [[Corcuera]]
 * [[Ferrol, Romblon|Ferrol]]
 * [[Looc, Romblon|Looc]]
 * [[Magdiwang, Romblon|Magdiwang]]
