--- a/Corcuera.mw
+++ b/Corcuera.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon corcuera.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Corcuera, Romblon
 | 1990 = 9438		
@@ -30,6 +31,8 @@ Say '''Corcuera''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipin
 * San Vicente
 * Tacasan
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -37,6 +40,5 @@ Say '''Corcuera''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipin
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
-												
+ 											
 [[Category:Saray baley na Romblon]]
