--- a/Ferrol.mw
+++ b/Ferrol.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon ferrol.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ferrol, Romblon
 | 1990 = 5621		
@@ -21,6 +22,8 @@ Say '''Ferrol''' et kumanem ya klase baley ed luyag na [[Romblon]], [[Pilipinas]
 * Hinaguman
 * Tubigon
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -28,7 +31,5 @@ Say '''Ferrol''' et kumanem ya klase baley ed luyag na [[Romblon]], [[Pilipinas]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
-
 												
 [[Category:Saray baley na Romblon]]
