--- a/Looc,_Romblon.mw
+++ b/Looc,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon looc.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Looc, Romblon
 | 1990 = 19285		
@@ -27,6 +28,8 @@ Say '''Looc''' et kumapat ya klase baley ed luyag na [[Romblon]], [[Pilipinas]].
 * Punta
 * Tuguis
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -34,6 +37,5 @@ Say '''Looc''' et kumapat ya klase baley ed luyag na [[Romblon]], [[Pilipinas]].
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
 												
 [[Category:Saray baley na Romblon]]
