--- a/Magdiwang.mw
+++ b/Magdiwang.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon magdiwang.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magdiwang, Romblon
 | 1990 = 10405		
@@ -24,6 +25,8 @@ Say '''Magdiwang''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipi
 * Silum
 * Tampayan
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -31,6 +34,5 @@ Say '''Magdiwang''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipi
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
-											
+ 										
 [[Category:Saray baley na Romblon]]
