--- a/Odiongan.mw
+++ b/Odiongan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon odiongan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Odiongan, Romblon
 | 1990 = 32498		
@@ -40,6 +41,8 @@ Say '''Odiongan''' et kumadwa ya klase baley ed luyag na [[Romblon]], [[Pilipina
 * Liwayway
 * Tuburan
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -47,6 +50,5 @@ Say '''Odiongan''' et kumadwa ya klase baley ed luyag na [[Romblon]], [[Pilipina
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Romblon}}
- 
-											
+ 										
 [[Category:Saray baley na Romblon]]
