--- a/Romblon,_Romblon.mw
+++ b/Romblon,_Romblon.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_romblon romblon.png |right|270px]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Romblon, Romblon
@@ -48,6 +48,8 @@ Unong ed 2010 Census, say papulasyon to et 37,995 totoo. Walay kabaleg tan sukat
 * Sawang
 * Tambac
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
