--- a/San_Agustin,_Romblon.mw
+++ b/San_Agustin,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon san agustin.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Agustin, Romblon
 | 1990 = 18066		
@@ -29,7 +30,9 @@ Say '''San Agustin''' et kumapat ya klase baley ed luyag na [[Romblon]], [[Pilip
 * Poblacion
 * Sugod
 * Camantaya
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
