--- a/San_Andres,_Romblon.mw
+++ b/San_Andres,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon san andres.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Andres, Romblon
 | 1990 = 11570		
@@ -27,7 +28,9 @@ Say '''San Andres''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilip
 * Tan-Agan
 * Victoria
 * Juncarlo
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
