--- a/San_Fernando,_Romblon.mw
+++ b/San_Fernando,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon san fernando.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Fernando, Romblon
 | 1990 = 17768		
@@ -26,7 +27,9 @@ Say '''San Fernando''' et kumapat ya klase baley ed luyag na [[Romblon]], [[Pili
 * Pili
 * Poblacion
 * Taclobo
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
