--- a/San_Jose,_Romblon.mw
+++ b/San_Jose,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon san jose.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jose, Romblon
 | 1990 = 7139		
@@ -19,7 +20,9 @@ Say '''San Jose''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipin
 * Lanas
 * Pinamihagan
 * Poblacion (Agcogon)
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
