--- a/Santa_Fe,_Romblon.mw
+++ b/Santa_Fe,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon santa fe.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Fe, Romblon
 | 1990 = 11628		
@@ -26,6 +27,8 @@ Say '''Santa Fe''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pilipin
 * Poblacion
 * Tabugon
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
