--- a/Santa_Maria,_Romblon.mw
+++ b/Santa_Maria,_Romblon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator romblon santa maria.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Maria, Romblon
 | 1990 = 6459		
@@ -20,7 +21,9 @@ Say '''Santa Maria''' et kumalima ya klase baley ed luyag na [[Romblon]], [[Pili
 * Paroyhog
 * Santo Niño
 * San Isidro
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
