--- a/Catbalogan.mw
+++ b/Catbalogan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_samar_catbalogan.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Catbalogan''' et kumanem ya klase siyudad ed luyag na [[Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 94,317 totoo. <br> 	
-Walay kabaleg tan sukat to ya 274.22 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6700. 			
+Walay kabaleg tan sukat to ya 274.22 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6700.
+
+== Saray reperensiya ==
+{{Reflist}} 	
+
+{{Samar}}		
 									
 [[Category:Saray siyudad na Filipinas]]
