--- a/Calbayog.mw
+++ b/Calbayog.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_samar_calbayog.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Calbayog''' et unaan ya klase siyudad ed luyag na [[Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 172,778 totoo. <br> 	
-Walay kabaleg tan sukat to ya 880.74 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6710. 			
+Walay kabaleg tan sukat to ya 880.74 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6710. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Samar}}	
 									
 [[Category:Saray siyudad na Filipinas]]
