--- a/Almagro.mw
+++ b/Almagro.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar almagro.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Almagro, Samar 
 | 1990 = 8578		
@@ -38,6 +39,8 @@ Say '''Almagro''' et kumalima ya klase baley ed luyag na [[Samar]], [[Pilipinas]
 * San Jose
 * Veloso
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -45,6 +48,5 @@ Say '''Almagro''' et kumalima ya klase baley ed luyag na [[Samar]], [[Pilipinas]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Samar}}
- 
 														
 [[Category:Saray baley na Samar]]
