--- a/Basey.mw
+++ b/Basey.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar basey.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Basey, Samar 
 | 1990 = 39137		
@@ -65,6 +66,9 @@ Say '''Basey''' et unaan ya klase baley ed luyag na [[Samar]], [[Pilipinas]]. Un
 * Villa Aurora
 * Binongtu-an
 * Bulao
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
