--- a/Calbiga.mw
+++ b/Calbiga.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar calbiga.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calbiga, Samar 
 | 1990 = 17116		
@@ -56,6 +57,9 @@ Say '''Calbiga''' et kumapat ya klase baley ed luyag na [[Samar]], [[Pilipinas]]
 * Sinalangtan
 * Timbangan
 * Tinago
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
