--- a/Daram.mw
+++ b/Daram.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar daram.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Daram, Samar 
 | 1990 = 31332		
@@ -72,6 +73,9 @@ Say '''Daram''' et kumatlo ya klase baley ed luyag na [[Samar]], [[Pilipinas]]. 
 * San Vicente
 * Sugod
 * Yangta
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
