--- a/Gandara.mw
+++ b/Gandara.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar gandara.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gandara, Samar 
 | 1990 = 23673		
@@ -83,6 +84,9 @@ Say '''Gandara''' et kumadwa ya klase baley ed luyag na [[Samar]], [[Pilipinas]]
 * Tambongan
 * Tawiran
 * Tigbawon
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
