--- a/Hinabangan.mw
+++ b/Hinabangan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar hinabangan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hinabangan, Samar 
 | 1990 = 11906		
@@ -35,6 +36,9 @@ Say '''Hinabangan''' et kumapat ya klase baley ed luyag na [[Samar]], [[Pilipina
 * San Jose
 * Fatima
 * Mugdo
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
