--- a/Jiabong.mw
+++ b/Jiabong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar jiabong.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jiabong, Samar 
 | 1990 = 12751		
@@ -49,6 +50,9 @@ Say '''Jiabong''' et kumalima ya klase baley ed luyag na [[Samar]], [[Pilipinas]
 *San Miguel
 *Tagbayaon
 *Victory
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
