--- a/Marabut.mw
+++ b/Marabut.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar marabut.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Marabut, Samar 
 | 1990 = 10543		
@@ -38,6 +39,9 @@ Say '''Marabut''' et kumalima ya klase baley ed luyag na [[Samar]], [[Pilipinas]
 * Roño
 * Santa Rita
 * Veloso
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 == Saray gawing ed labas ==
 * [http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
