--- a/Matuguinao.mw
+++ b/Matuguinao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar matuguinao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Matuguinao, Samar 
 | 1990 = 3819		
@@ -34,6 +35,9 @@ Say '''Matuguinao''' et kumalima ya klase baley ed luyag na [[Samar]], [[Pilipin
 * Bag-otan
 * Inubod
 * San Roque (Mabuhay)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
