--- a/Motiong.mw
+++ b/Motiong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar motiong.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Motiong, Samar 
 | 1990 = 12115		
@@ -44,6 +45,9 @@ Say '''Motiong''' et kumapat ya klase baley ed luyag na [[Samar]], [[Pilipinas]]
 * Santo Niño
 * Sarao
 * Pusongan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
