--- a/Pagsanghan.mw
+++ b/Pagsanghan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar pagsanghan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pagsanghan, Samar 
 | 1990 = 6047		
@@ -27,6 +28,9 @@ Say '''Pagsanghan''' et kumalima ya klase baley ed luyag na [[Samar]], [[Pilipin
 * Viejo
 * Villahermosa Occidental
 * Villahermosa Oriental
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
