--- a/Paranas.mw
+++ b/Paranas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar paranas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Paranas, Samar 
 | 1990 = 22702		
@@ -58,6 +59,9 @@ Say '''Paranas''' et kumadwa ya klase baley ed luyag na [[Samar]], [[Pilipinas]]
 * Tutubigan
 * Casandig II
 * Lawaan II
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
