--- a/Pinabacdao.mw
+++ b/Pinabacdao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar pinabacdao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pinabacdao, Samar 
 | 1990 = 10361		
@@ -38,6 +39,9 @@ Say '''Pinabacdao''' et kumapat ya klase baley ed luyag na [[Samar]], [[Pilipina
 * Parasanon
 * Pelaon
 * San Isidro
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
