--- a/San_Jose_de_Buan.mw
+++ b/San_Jose_de_Buan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar san jose de buan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jose de Buan, Samar 
 | 1990 = 4217		
@@ -28,6 +29,9 @@ Say '''San Jose de Buan''' et kumapat ya klase baley ed luyag na [[Samar]], [[Pi
 * Baranggay 4 (Pob.)
 * San Nicolas
 * Hibaca-an
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
