--- a/Santa_Rita,_Samar.mw
+++ b/Santa_Rita,_Samar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar santa rita.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Rita, Samar 
 | 1990 = 25202		
@@ -52,6 +53,9 @@ Say '''Santa Rita''' et kumatlo ya klase baley ed luyag na [[Samar]], [[Pilipina
 * Rosal Pob. (Zone III)
 * Gumamela Pob. (Zone IV)
 * Bokinggan Pob. (Zone V)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
