--- a/Tagapul-an.mw
+++ b/Tagapul-an.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar tagapul-an.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tagapul-an, Samar 
 | 1990 = 6760		
@@ -28,6 +29,9 @@ Say '''Tagapul-an''' et kumalima ya klase baley ed luyag na [[Samar]], [[Pilipin
 * Suarez (Manlangit)
 * San Jose (Pob.)
 * Trinidad
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
