--- a/Talalora.mw
+++ b/Talalora.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar talalora.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talalora, Samar 
 | 1990 = 6112		
@@ -25,6 +26,9 @@ Say '''Talalora''' et kumanem ya klase baley ed luyag na [[Samar]], [[Pilipinas]
 * San Juan
 * Tatabunan
 * Victory
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
