--- a/Tarangnan.mw
+++ b/Tarangnan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar tarangnan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tarangnan, Samar 
 | 1990 = 15894		
@@ -55,6 +56,9 @@ Say '''Tarangnan''' et kumapat ya klase baley ed luyag na [[Samar]], [[Pilipinas
 * Talinga
 * Tigdaranao
 * Tizon
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
