--- a/Alabel.mw
+++ b/Alabel.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sarangani alabel.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alabel, Sarangani
 | 1990 = 40730		
@@ -12,8 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Alabel''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 75,477 totoo. Walay kabaleg tan sukat to ya 510.98 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9501.	
-
-
 
 ==Saray barangay==
 * Alegria 
@@ -30,6 +29,8 @@ Say '''Alabel''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]
 * Tokawal
 * Poblacion (ladol)
 
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
