--- a/Enrique_Villanueva.mw
+++ b/Enrique_Villanueva.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator siquijor enrique villanueva.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Enrique Villanueva, Siquijor
 | 1990 = 4733		
@@ -13,7 +14,6 @@
 |}}
 Say '''Enrique Villanueva''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 5,972 totoo. Walay kabaleg tan sukat to ya 28.6 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6230.	
 	
-
 ==Saray barangay==
 * Balolong
 * Bino-ongan
@@ -30,10 +30,14 @@ Say '''Enrique Villanueva''' et kumalima ya klase baley ed luyag na [[Siquijor]]
 * Poblacion
 * Tulapos
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Siquijor}}													
+{{Siquijor}}	
+												
 [[Category:Saray baley na Siquijor]]
