--- a/San_Juan,_Siquijor.mw
+++ b/San_Juan,_Siquijor.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator siquijor san juan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Juan, Siquijor
 | 1990 = 11375		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Juan''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 13,525 totoo. Walay kabaleg tan sukat to ya 44.37 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6227.	
 	
-
 ==Saray barangay==
 * Canasagan
 * Candura
@@ -31,8 +31,9 @@ Say '''San Juan''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipi
 * Timbaon
 * Tubod
 
+== Saray reperensiya ==
+{{Reflist}}
 	
-
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
