--- a/Siquijor,_Siquijor.mw
+++ b/Siquijor,_Siquijor.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator siquijor siquijor.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Siquijor, Siquijor
 | 1990 = 18860		
@@ -13,7 +14,6 @@
 |}}
 Say '''Siquijor''' et kumapat ya klase baley ed luyag na [[Siquijor]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 25,231 totoo. Walay kabaleg tan sukat to ya 90.7 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6225.	
 			
-
 ==Saray barangay==
 * Banban
 * Bolos
@@ -58,8 +58,9 @@ Say '''Siquijor''' et kumapat ya klase baley ed luyag na [[Siquijor]], [[Pilipin
 * Tinago
 * Tongo
 
+== Saray reperensiya ==
+{{Reflist}}
 	
-
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
