--- a/Barcelona,_Sorsogon.mw
+++ b/Barcelona,_Sorsogon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon barcelona.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Barcelona, Sorsogon
 | 1990 = 16251		
@@ -13,7 +14,6 @@
 |}}
 Say '''Barcelona''' et kumalima ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 20,990 totoo. Walay kabaleg tan sukat to ya 61.18 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4712.	
 		
-
 ==Saray barangay==
 * Alegria
 * Bagacay
@@ -41,7 +41,8 @@ Say '''Barcelona''' et kumalima ya klase baley ed luyag na [[Sorsogon]], [[Pilip
 * Santa Lourdes
 * Tagdon
 
-	
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
