--- a/Bulusan.mw
+++ b/Bulusan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon bulusan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bulusan, Sorsogon
 | 1990 = 18009		
@@ -13,7 +14,6 @@
 |}}
 Say '''Bulusan''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 22,884 totoo. Walay kabaleg tan sukat to ya 96.3 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4704.	
 			
-
 ==Saray barangay==
 
 * Bagacay
@@ -41,6 +41,8 @@ Say '''Bulusan''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipina
 * Sapngan (Poblacion)
 * Tinampo
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -48,6 +50,5 @@ Say '''Bulusan''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipina
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sorsogon}}
- 
-												
+ 											
 [[Category:Saray baley na Sorsogon]]
