--- a/Castilla.mw
+++ b/Castilla.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon castilla.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Castilla, Sorsogon
 | 1990 = 34702		
@@ -13,7 +14,6 @@
 |}}
 Say '''Castilla''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 57,827 totoo. Walay kabaleg tan sukat to ya 186.2 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4713.	
 					
-
 ==Saray barangay==
 
 * Amomonting
@@ -51,7 +51,8 @@ Say '''Castilla''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilipin
 * Sogoy
 * Tomalaytay
 
-	
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
