--- a/Gubat.mw
+++ b/Gubat.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator sorsogon gubat.png|right|270px]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gubat, Sorsogon
@@ -16,7 +16,6 @@
 Say '''Gubat''' et kumadwa ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 59,534 
 totoo. Walay kabaleg tan sukat to ya 134.51 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4710.	
 							
-
 ==Saray barangay==
 
 * Ariman
@@ -62,7 +61,8 @@ totoo. Walay kabaleg tan sukat to ya 134.51 sq. km. Sikato et walad kumadwa ya d
 * Union
 * Villareal
 
-	
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
